--- a/TfsWitAnnotateField.UI/packages.config
+++ b/TfsWitAnnotateField.UI/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MvvmLight" version="4.1.26.1" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="MvvmLight" version="5.1.1.0" targetFramework="net45" />
+  <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
 </packages>
