--- a/TfsWitAnnotateField.UI/packages.config
+++ b/TfsWitAnnotateField.UI/packages.config
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights" version="0.7.1" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.Tracing" version="0.7.1" targetFramework="net45" />
+  <package id="Microsoft.Diagnostics.Tracing.EventRegister" version="1.0.10-rc" targetFramework="net45" />
+  <package id="Microsoft.Diagnostics.Tracing.EventSource" version="1.0.16" targetFramework="net45" />
   <package id="MvvmLight" version="5.1.1.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
 </packages>
