--- a/TfsWitAnnotateField.UI/TfsWitAnnotateField.UI.csproj
+++ b/TfsWitAnnotateField.UI/TfsWitAnnotateField.UI.csproj
@@ -452,6 +452,9 @@
     </PublishFile>
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Assets\nkdalm-logo-background.png" />
+    <Resource Include="Assets\nkdalm-logo-eye.png" />
+    <Resource Include="Assets\nkdalm-logo-signate.png" />
     <Content Include="Microsoft.WITDataStore32.dll" />
     <Content Include="Microsoft.WITDataStore64.dll" />
   </ItemGroup>
