--- a/TfsWitAnnotateField.UI/TfsWitAnnotateField.UI.csproj
+++ b/TfsWitAnnotateField.UI/TfsWitAnnotateField.UI.csproj
@@ -32,6 +32,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <InstallUrl>https://nkdalm.blob.core.windows.net/clickonce/TfsWitAnnotateField/</InstallUrl>
+    <UpdateUrl>https://nkdalm.blob.core.windows.net/clickonce/TfsWitAnnotateField/</UpdateUrl>
     <SupportUrl>http://nakedalm.com/tfs-field-annotator/</SupportUrl>
     <ErrorReportUrl>http://nakedalm.com/tfs-field-annotator/</ErrorReportUrl>
     <ProductName>Field Annotate</ProductName>
@@ -39,7 +40,7 @@
     <SuiteName>Visual Studio ALM Tools</SuiteName>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>install.htm</WebPage>
-    <ApplicationRevision>6</ApplicationRevision>
+    <ApplicationRevision>9</ApplicationRevision>
     <ApplicationVersion>1.3.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
