--- a/TfsWitAnnotateField.UI/App.config
+++ b/TfsWitAnnotateField.UI/App.config
@@ -3,4 +3,12 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
+    <system.diagnostics>
+        <trace autoflush="true" indentsize="0">
+            <listeners>
+                <add name="myAppInsightsListener"
+                    type="Microsoft.ApplicationInsights.TraceListener.ApplicationInsightsTraceListener, Microsoft.ApplicationInsights.TraceListener"/>
+            </listeners>
+        </trace>
+    </system.diagnostics>
 </configuration>
