--- a/TfsWitAnnotateField.UI/packages.config
+++ b/TfsWitAnnotateField.UI/packages.config
@@ -1,10 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
-  <package id="Microsoft.ApplicationInsights" version="0.7.1" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights" version="0.13.1-build00186" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.TraceListener" version="0.13.1-build00186" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.Tracing" version="0.7.1" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.8" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
   <package id="Microsoft.Diagnostics.Tracing.EventRegister" version="1.0.10-rc" targetFramework="net45" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource" version="1.0.16" targetFramework="net45" />
+  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.14-beta" targetFramework="net45" />
   <package id="MvvmLight" version="5.1.1.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
