--- a/TfsWitAnnotateField.UI/ApplicationInsights.config
+++ b/TfsWitAnnotateField.UI/ApplicationInsights.config
@@ -6,6 +6,7 @@
   -->
   <TelemetryModules>
     <Add Type="Microsoft.ApplicationInsights.Extensibility.Implementation.Tracing.DiagnosticsTelemetryModule, Microsoft.ApplicationInsights"/>
+    <Add Type="Microsoft.ApplicationInsights.Extensibility.RuntimeTelemetry.RemoteDependencyModule, Microsoft.ApplicationInsights.Extensibility.RuntimeTelemetry"/>
   </TelemetryModules>
   <InstrumentationKey>c9466e74-f4a4-4db0-9c10-b2741995236e</InstrumentationKey>
 </ApplicationInsights>
