--- a/TfsWitAnnotateField.UI/packages.config
+++ b/TfsWitAnnotateField.UI/packages.config
@@ -2,11 +2,13 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights" version="0.13.1-build00186" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.RuntimeTelemetry" version="0.13.1-build00186" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.TraceListener" version="0.13.1-build00186" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.Tracing" version="0.7.1" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.8" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
+  <package id="Microsoft.Diagnostics.Instrumentation.Extensions.Intercept" version="0.13.0-build22724" targetFramework="net45" />
   <package id="Microsoft.Diagnostics.Tracing.EventRegister" version="1.0.10-rc" targetFramework="net45" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource" version="1.0.16" targetFramework="net45" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.14-beta" targetFramework="net45" />
