Trying to set session ID for AI

--- a/TfsWitAnnotateField.UI/ApplicationInsights.config
+++ b/TfsWitAnnotateField.UI/ApplicationInsights.config
@@ -9,4 +9,8 @@
     <Add Type="Microsoft.ApplicationInsights.Extensibility.RuntimeTelemetry.RemoteDependencyModule, Microsoft.ApplicationInsights.Extensibility.RuntimeTelemetry"/>
   </TelemetryModules>
   <InstrumentationKey>c9466e74-f4a4-4db0-9c10-b2741995236e</InstrumentationKey>
+  <TelemetryChannel>
+    <DataUploadIntervalInSeconds>5</DataUploadIntervalInSeconds>
+    <DeveloperMode>true</DeveloperMode>
+  </TelemetryChannel>
 </ApplicationInsights>
